# prompt-analytics-for-claude-code

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pricing-drift.yml  release.yml
.streamlit/: config.toml
demo_data/: categories.csv  config.yml  context_cost.csv  context_sources.csv  output_files.csv  output_tokens.csv  prompts.csv  quota_log.csv  requests.csv  sessions.csv  task_prompts.csv  tasks.csv  token_types.csv  tokens.csv
docs/: architecture.md  dashboard.md
prompt_analytics/: __init__.py  __main__.py  analytics.py  categorize.py  cli.py  compose.py  config.py  context.py  embeddings.py  extract.py  paths.py  pricing.py  render.py  schema.py  snapshot.py  storage.py  tasks.py  taxonomy_audit.py  tokenizer.py
prompt_analytics/dashboard/: __init__.py  app.py  data.py  echarts.py  filters.py  impact.py  tables.py  theme.py
prompt_analytics/dashboard/pages/: 10_how_it_works.py  11_explorer.py  12_file_explorer.py  1_overview.py  2_models.py  3_prompts.py  4_session_depth.py  5_sessions.py  6_optimize.py  7_quotas.py  8_composition.py  9_compare.py  __init__.py
prompt_analytics/data/: pricing.yml  semantic_anchors.yml
scripts/: capture_fixture.py  eval_litmus.yml  eval_semantic.py  fetch_copilot_pricing.py  generate_demo_data.py  reconcile_ccusage.py
tests/: __init__.py  conftest.py  test_analytics.py  test_analytics_power.py  test_analytics_requests.py  test_categorize.py  test_categorize_semantic.py  test_cli.py  test_compose.py  test_config.py  test_context.py  test_dashboard.py  test_dashboard_theme.py  test_demo_data.py  test_embeddings.py  test_eval_semantic.py  test_extract.py  test_fixtures_versioned.py  test_pricing.py  test_snapshot.py  test_storage.py  test_tasks.py  test_taxonomy_audit.py  test_tokenizer.py
tests/fixtures/: README.md  agent_delta.jsonl  session_alpha.jsonl  session_beta.jsonl  session_delta.jsonl  session_delta_resumed.jsonl  session_gamma.jsonl  session_output.jsonl
tests/fixtures/claude-code-2.1.173/demo-project/: d42b86da-418a-49a0-842a-43af6212339e.jsonl
